C++II/.metadata/.plugins/org.eclipse.cdt.ui/global-build.log
15:04:59 **** Incremental Build of configuration Default for project Lab06StudentIO ****
make all 
make: Nothing to be done for `all'.
15:05:04 **** Incremental Build of configuration Default for project Lab06StudentIO ****
make all 
make: Nothing to be done for `all'.
16:04:02 **** Incremental Build of configuration Debug for project 01-20 ExampleClass ****
make all 
make: Nothing to be done for `all'.
16:04:04 **** Incremental Build of configuration Debug for project 01-25myStringConstructors ****
make all 
make: Nothing to be done for `all'.
16:04:04 **** Incremental Build of configuration Debug for project 02-03 IntArray ****
make all 
make: Nothing to be done for `all'.
16:04:05 **** Incremental Build of configuration Debug for project 02-08GenericArray ****
make all 
make: Nothing to be done for `all'.
16:04:05 **** Incremental Build of configuration Debug for project 02-15Exceptions ****
make all 
Building file: ../src/02-15Exceptions.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/02-15Exceptions.d" -MT"src/02-15Exceptions.o" -o "src/02-15Exceptions.o" "../src/02-15Exceptions.cpp"
../src/02-15Exceptions.cpp:18:25: error: expected type-specifier before ‘...’ token
 void Func1 (int) throw (...);
                         ^
../src/02-15Exceptions.cpp:19:25: error: expected type-specifier before ‘...’ token
 void Func2 (int) throw (...);// if there is a potential to have a throw in the function.  throw (...) just lets people know that Func2 might throw an exception.
                         ^
make: *** [src/02-15Exceptions.o] Error 1
16:04:05 **** Incremental Build of configuration Debug for project 02-17Name ****
make all 
Building file: ../src/02-17Name.cpp
Invoking: GCC C++ Compiler
g++ -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/02-17Name.d" -MT"src/02-17Name.o" -o "src/02-17Name.o" "../src/02-17Name.cpp"
In file included from ../src/02-17Name.cpp:10:0:
../src/Name.h:14:63: fatal error: WCS_String.h: No such file or directory
 #include <WCS_String.h>  //Bill will provide this class later.
                                                               ^
compilation terminated.
make: *** [src/02-17Name.o] Error 1
16:04:06 **** Incremental Build of configuration Debug for project 02-22Name2 ****
make all 
make: Nothing to be done for `all'.
16:04:06 **** Clean-only build of configuration Debug for project 02-29LowerCaseString ****
make clean 
rm -rf  ./src/02-29LowerCaseString.o ./src/LowerCaseString.o  ./src/02-29LowerCaseString.d ./src/LowerCaseString.d  lib02-29LowerCaseString
 

**** Build of configuration Debug for project 02-29LowerCaseString ****

Nothing to build for project 02-29LowerCaseString
16:04:06 **** Incremental Build of configuration Debug for project 03-21FileIO ****
make all 
make: Nothing to be done for `all'.
16:04:06 **** Incremental Build of configuration Debug for project 03-21Static ****
make all 
make: Nothing to be done for `all'.
16:04:07 **** Incremental Build of configuration Debug for project 03-23ReadfromFile ****
make all 
make: Nothing to be done for `all'.
16:04:07 **** Incremental Build of configuration Debug for project 03-23WritetoFile ****
make all 
make: Nothing to be done for `all'.
16:04:07 **** Incremental Build of configuration Default for project 03-28CommaDelimitedStrings ****
make all 
make: Nothing to be done for `all'.
16:04:07 **** Incremental Build of configuration Debug for project 03-28qsort ****
make all 
make: Nothing to be done for `all'.
16:04:07 **** Incremental Build of configuration Debug for project 03-30 IO Operations ****
make all 
make: Nothing to be done for `all'.
16:04:08 **** Incremental Build of configuration Debug for project 03-30Average ****
make all 
make: Nothing to be done for `all'.
16:04:08 **** Incremental Build of configuration Debug for project 03-30MainArguments ****
make all 
make: Nothing to be done for `all'.
16:04:08 **** Incremental Build of configuration Debug for project AnotherGenericArray ****
make all 
make: Nothing to be done for `all'.
16:04:09 **** Incremental Build of configuration Debug for project Lab03GenericDataArray ****
make all 
make: Nothing to be done for `all'.
16:04:09 **** Incremental Build of configuration Debug for project Lab04NameClass ****
make all 
make: Nothing to be done for `all'.
16:04:09 **** Incremental Build of configuration Debug for project Lab05inheritance ****
make all 
make: Nothing to be done for `all'.
16:04:10 **** Incremental Build of configuration Default for project Lab06StudentIO ****
make all 
Building file: ../src/MainStudentIO.cpp
Invoking: GCC C++ Compiler
g++ -O2 -g -Wall -c -fmessage-length=0 -MMD -MP -MF"src/MainStudentIO.d" -MT"src/MainStudentIO.o" -o "src/MainStudentIO.o" "../src/MainStudentIO.cpp"
Finished building: ../src/MainStudentIO.cpp
 
Building file: ../src/Name.cpp
Invoking: GCC C++ Compiler
g++ -O2 -g -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Name.d" -MT"src/Name.o" -o "src/Name.o" "../src/Name.cpp"
Finished building: ../src/Name.cpp
 
Building file: ../src/Student.cpp
Invoking: GCC C++ Compiler
g++ -O2 -g -Wall -c -fmessage-length=0 -MMD -MP -MF"src/Student.d" -MT"src/Student.o" -o "src/Student.o" "../src/Student.cpp"
Finished building: ../src/Student.cpp
 
Building target: Lab06StudentIO
Invoking: GCC C++ Linker
g++ -L/home/mbd06b/WSfilesforEclipse -o "Lab06StudentIO"  ./src/MainStudentIO.o ./src/Name.o ./src/Student.o ./src/myStringclass.o   
Finished building target: Lab06StudentIO
 
16:04:11 **** Incremental Build of configuration Debug for project LabOneClasses ****
make all 
make: Nothing to be done for `all'.
16:04:11 **** Incremental Build of configuration Debug for project LowerCaseString02-29 ****
make all 
Building file: ../src/02-29LowerCaseString.cpp
Invoking: GCC C++ Compiler
g++ -I/home/mbd06b/eclipse/libraries -O0 -g3 -Wall -c -fmessage-length=0 -MMD -MP -MF"src/02-29LowerCaseString.d" -MT"src/02-29LowerCaseString.o" -o "src/02-29LowerCaseString.o" "../src/02-29LowerCaseString.cpp"
In file included from ../src/02-29LowerCaseString.cpp:10:0:
../src/LowerCaseString.h:12:24: fatal error: WCS_String.h: No such file or directory
 #include <WCS_String.h>
                        ^
compilation terminated.
make: *** [src/02-29LowerCaseString.o] Error 1
16:04:12 **** Incremental Build of configuration Debug for project StudentRecords ****
make all 
make: Nothing to be done for `all'.
